--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,16 @@
   color: white;
 }
 
+.App-main {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
 .App-link {
   color: #61dafb;
 }
@@ -30,4 +40,32 @@
   border-style: solid;
   border-color: white;
   border-width: 0.1em;
+}
+
+#article_title {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.article_details_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1em;
+}
+
+.article_comments_container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2em;
+}
+
+.article_link {
+  color: inherit;
+  text-decoration: underline 0.5px;
 }
