--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@
 }
 
 .article_details_container {
+  font-size: 0.8em;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -68,4 +69,9 @@
 .article_link {
   color: inherit;
   text-decoration: underline 0.5px;
+}
+
+.article_comments {
+  display: flex;
+  flex-direction: rows;
 }
