--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@
 
 .App-main {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,14 +31,22 @@
   color: #61dafb;
 }
 
-#articles_th {
+.article_table {
   border-collapse: collapse;
-}
-
-#articles_tr {
   border-style: solid;
   border-color: white;
   border-width: 0.1em;
+}
+
+.articles_tr {
+  padding: 0.5em;
+}
+
+.articles_td {
+  border-style: solid;
+  border-color: white;
+  border-width: 0.1em;
+  padding: 0.5em;
 }
 
 #article_title {
