--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2em;
+  margin-top: 3em;
 }
 
 .article_link {
@@ -85,8 +85,7 @@
 }
 
 .article_comments {
-  display: flex;
-  flex-direction: rows;
+  margin-bottom: 2em;
 }
 
 .topic-links {
