--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2em;
+  margin-top: 3em;
 }
 
 .article_link {
@@ -85,8 +85,7 @@
 }
 
 .article_comments {
-  display: flex;
-  flex-direction: rows;
+  margin-top: 2em;
 }
 
 .topic-links {
@@ -112,4 +111,19 @@
 .comment_votes {
   align-items: right;
   margin: 1em;
+}
+
+.comment-form {
+  display: flex;
+  flex-direction: column;
+}
+
+#comment-textarea {
+  color: #fff;
+  width: 30em;
+  height: 10em;
+}
+
+#submit-button {
+  color: #fff;
 }
