--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
-  background-color: #282c34;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: black;
 }
 
 .App {
@@ -12,7 +13,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: black;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -23,7 +24,7 @@
 }
 
 .App-main {
-  background-color: #282c34;
+  background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,7 +55,7 @@
 }
 
 #article_title {
-  background-color: #282c34;
+  background-color: black;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -77,9 +78,11 @@
   flex-direction: column;
   align-items: center;
   margin-top: 3em;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
-.article_link {
+.link {
   color: inherit;
   text-decoration: underline 0.5px;
 }
